@@ -6,6 +6,7 @@ Revision history for Perl extension Perl-MinimumVersion
         - steal argument counting code from Perl::Critic,
           reimplement _three_argument_open, more tests (Alexandr Ciornii)
           Now check for 3-arg open is working.
+        - Check 4-arg substr that requires perl 5.5 (Alexandr Ciornii)
 
 1.20 Sat  4 Apr 2009
 	- Change 5.005_03 to 5.005.05 (ADAMK)
